  * sync: As well as the synced/git-annex push, attempt a
    git-annex:git-annex push, as long as the remote branch
    is an ancestor of the local branch, to better support bare git repos.
    (This used to be done, but it forgot to do it since version 4.20130909.)
  * When re-execing git-annex, use current program location, rather than
    ~/.config/git-annex/program, when possible.

 -- Joey Hess <id@joeyh.name>  Thu, 19 Feb 2015 14:16:03 -0400

git-annex (5.20150219) unstable; urgency=medium

  * glacier: Detect when the glacier command in PATH is the wrong one,
    from boto, rather than from glacier-cli, and refuse to use it,
    since the boto program fails to fail when passed
    parameters it does not understand.
  * groupwanted: New command to set the groupwanted preferred content
    expression.
  * import: Support file matching options such as --exclude, --include, 
    --smallerthan, --largerthan
  * The file matching options are now only accepted by commands that
    can actually use them, instead of by all commands.
  * import: Avoid checksumming file twice when run in the default
    or --duplicate mode.
  * Windows: Fix bug in dropping an annexed file, which
    caused a symlink to be staged that contained backslashes.
  * webapp: Fix reversion in opening webapp when starting it manually
    inside a repository.
  * assistant: Improve sanity check for control characters when pairing.
  * Improve race recovery code when committing to git-annex branch.
  * addurl: Avoid crash if quvi is not installed, when git-annex was
    built with process-1.2
  * bittorrent: Fix mojibake introduced in parsing arai2c progress output.
  * fsck --from: If a download from a remote fails, propagate the failure.
  * metadata: When setting metadata, do not recurse into directories by
    default, since that can be surprising behavior and difficult to recover
    from. The old behavior is available by using --force.