@@ -37,7 +37,7 @@ module Annex (
 import Common
 import qualified Git
 import qualified Git.Config
-import Annex.Direct.Fixup
+import Annex.Fixup
 import Git.CatFile
 import Git.CheckAttr
 import Git.CheckIgnore
@@ -183,12 +183,13 @@ newState c r = AnnexState
 	}
 
 {- Makes an Annex state object for the specified git repo.
- - Ensures the config is read, if it was not already. -}
+ - Ensures the config is read, if it was not already, and performs
+ - any necessary git repo fixups. -}
 new :: Git.Repo -> IO AnnexState
 new r = do
 	r' <- Git.Config.read =<< Git.relPath r
 	let c = extractGitConfig r'
-	newState c <$> if annexDirect c then fixupDirect r' else return r'
+	newState c <$> fixupRepo r' c
 
 {- Performs an action in the Annex monad from a starting state,
  - returning a new state. -}
