@@ -21,6 +21,7 @@ git-annex (5.2015022) UNRELEASED; urgency=medium
     (This used to be done, but it forgot to do it since version 4.20130909.)
   * When re-execing git-annex, use current program location, rather than
     ~/.config/git-annex/program, when possible.
+  * Submodules are now supported by git-annex!
 
  -- Joey Hess <id@joeyh.name>  Thu, 19 Feb 2015 14:16:03 -0400
 
